welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
			if (getDirection() == Direction.OUEST) {
                        ^SnakeBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur() && position()) {return true}
                ^