welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	def fonctionTest(): Boolean = {
		def position(): Boolean = {
			var pos: Boolean = false
			if (getDirection() == Direction.EST) {
				gauche()
				if (estFaceMur()) {pos = true}
				droite()
				return pos
			}
			if (getDirection() == Direction.OUEST) {
				droite()
				if (estFaceMur()) {pos = true}
				gauche()
				return pos
			}
		}
		if (estFaceMur() && position()) {return true}
	}
	while(!fonctionTest()) {
		if (!estFaceMur()) {
			avance()
		}
		else {
			if (getDirection() == Direction.EST) {
				gauche()
				avance()
				gauche()
			}
			else {
				droite()
				avance()
				droite()
			}
		}
	}
}
